--- a/Sample/Podfile
+++ b/Sample/Podfile
@@ -2,4 +2,4 @@ platform :ios, '7.0'
 
 #pod 'SLKAlertView', :path => '../'
 
-pod 'DZNCategories/Cocoa', '1.1.1'
+pod 'SAMCategories', :git => 'https://github.com/nickcheng/SAMCategories.git'
